# servir

./: .gitignore  API.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/bg_server/: __init__.py  _background_server.py  _protocols.py  _provide.py  _resources.py  _routing.py  _tilesets.py  _util.py
src/bgserve/: __init__.py  _background_server.py  _protocols.py  _provide.py  _resources.py  _tilesets.py
src/servir/: __init__.py  _background_server.py  _protocols.py  _provide.py  _resources.py  _tilesets.py  _util.py
tests/: test_bg_server.py  test_bgserve.py  test_provider.py  test_servir.py  test_tilesets.py  test_util.py
