[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "servir"
dynamic = ["version"]
description = "an extensible async background server"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "portpicker",
    "starlette>=0.26.1",
    "typing-extensions>=4.5.0 ; python_version < '3.11'",
    "uvicorn>=0.21.1",
]

[project.urls]
Documentation = "https://github.com/unknown/servir#readme"
Issues = "https://github.com/unknown/servir/issues"
Source = "https://github.com/unknown/servir"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "mypy>=1.0.0",
  "pytest",
  "requests",
]
[tool.hatch.envs.default.scripts]
typing = "mypy --strict --install-types --non-interactive {args:src/servir tests}"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
]

[tool.black]
target-version = ["py37"]
line-length = 90

[tool.ruff]
line-length = 90
target-version = "py37"
extend-select = [
    "E",    # style errors
    "F",    # flake8
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
known-first-party = ["servir"]

[tool.ruff.per-file-ignores]
"src/servir/__init__.py" = ["E402"]
"tests/*.py" = ["D", "S101"]

[tool.coverage.run]
source_pkgs = ["servir", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
servir = ["src/servir", "*/servir/src/servir"]
tests = ["tests", "*/servir/tests"]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()"
]

[[tool.mypy.overrides]]
# this might be missing in pre-commit, but they aren't typed anyway
module = ["portpicker"]
ignore_missing_imports = true
