[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "servir"
dynamic = ["version"]
description = "an extensible async background server"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = []
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "portpicker",
  "starlette>=0.35",
  "typing-extensions>=4.5.0 ; python_version < '3.11'",
  "uvicorn>=0.21.1",
]
[project.optional-dependencies]
dev = ["coverage[toml]>=6.5", "mypy>=1.0.0", "pytest", "requests", "ruff"]


[project.urls]
Documentation = "https://github.com/manzt/servir#readme"
Issues = "https://github.com/manzt/servir/issues"
Source = "https://github.com/manzt/servir"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
typing = "mypy --strict --install-types --non-interactive {args:src/servir tests}"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
lint = [
  "ruff check {args:.}",
  "ruff format --check --diff {args:.}",
]
fmt = [
  "ruff format {args:.}",
  "ruff check --fix {args:.}",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.ruff]
line-length = 90
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "E",   # style errors
  "F",   # flake8
  "D",   # pydocstyle
  "I",   # isort
  "UP",  # pyupgrade
  "RUF", # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["servir"]

[tool.ruff.lint.per-file-ignores]
"src/servir/__init__.py" = ["E402"]
"tests/*.py" = ["D", "S101"]

[tool.coverage.run]
source_pkgs = ["servir", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
servir = ["src/servir", "*/servir/src/servir"]
tests = ["tests", "*/servir/tests"]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError",
  "\\.\\.\\.",
  "raise NotImplementedError()",
]

[[tool.mypy.overrides]]
# this might be missing in pre-commit, but they aren't typed anyway
module = ["portpicker"]
ignore_missing_imports = true
